# cs6120

./: '  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  bril  link.txt
.github/workflows/: ci.yaml
bril-frontend/: Cargo.toml
bril-frontend/bril-programs/: add.bril  add_no_print.bril  import.bril  simple.bril  turnt.toml
bril-frontend/bril-programs/core_benchmarks_copied/: ackermann.out  armstrong.out  binary-fmt.out  birthday.out  bitshift.out  bitwise-ops.out  catalan.out  check-primes.out  collatz.out  digital-root.out  euclid.out  fact.out  factors.out  fitsinside.out  fizz-buzz.out  gcd.out  hanoi.out  is-decreasing.out  lcm.out  loopfact.out  mod_inv.out  orders.out  palindrome.out  pascals-row.out  perfect.out  primes-between.out  pythagorean_triple.out  quadratic.out  recfact.out  rectangles-area-difference.out  relative-primes.out  reverse.out  sum-bits.out  sum-check.out  sum-divisors.out  sum-sq-diff.out  totient.out  up-arrow.out
bril-frontend/examples/: print.rs  print_types.rs
bril-frontend/src/: ast.rs  infer_types.rs  lexer.rs  lib.rs  loc.rs  parser.rs  printer.rs
bril-frontend/tests/: infer_types.rs  lexer.rs  parser.rs
bril-frontend/tests/snapshots/: infer_types__add_bril_checks.snap  infer_types__add_no_print_bril_checks.snap  infer_types__add_returns_int.snap  infer_types__complex_bril_checks.snap  infer_types__import_bril_checks.snap  infer_types__simple_bril_checks.snap  lexer__add_bril_lexes.snap  lexer__all_tokens_work.snap  lexer__import_code.snap  lexer__invalid_characters.snap  lexer__simple_bril_lexes.snap  parser__add_bril_parses.snap  parser__add_no_print_bril_parses.snap  parser__import_bril_parses.snap  parser__invalid_foo_brace_should_not_parse.snap  parser__simple_bril_parses.snap
bril-lsp/: Cargo.toml  add.bril
bril-lsp/src/: main.rs
lesson2/: benchmark.bril  test.bril  writeup.md
lesson2/build-cfg/: Cargo.toml
lesson2/build-cfg/src/: lib.rs  main.rs  print.rs
lesson2/test/: check_equivalence.py
lesson3/: annoy.bril  brench.toml  brench_no_args.toml  check_brench.py  common.bril  make_better_chart.py  stats.txt  writeup.md
lesson3/lvn/: Cargo.toml
lesson3/lvn/src/: main.rs
lesson3/tdce/: Cargo.toml
lesson3/tdce/src/: main.rs
lesson4/: writeup.md
lesson4/bril-util/: Cargo.toml
lesson4/bril-util/src/: lib.rs
lesson4/dataflow/: Cargo.toml  check.py  match_outputs.py
lesson4/dataflow/src/: lib.rs  live_variables.rs  main.rs  reaching_definitions.rs
lesson4/dataflow/turnt/: turnt.toml
lesson4/dataflow/turnt/df_copied_from_bril/: cond-args.def.out  cond-args.live.out  cond.def.out  cond.live.out  fact.defined.out  fact.live.out
lesson5/dominators/: Cargo.toml
lesson5/dominators/src/: lib.rs  main.rs
lesson6/ssa/: Cargo.toml
lesson6/ssa/bril_from_ssa_copied/: basic.from_ssa  brench.toml  check_brench_from_ssa.py  ssa-simple.from_ssa  swap-problem.bril  swap-problem.from_ssa  turnt.toml
lesson6/ssa/bril_to_ssa_copied/: argwrite.bril  argwrite.phi_insertion  brench.toml  check_brench_into_ssa.py  if-const.phi_insertion  if.phi_insertion  loop-branch.phi_insertion  loop.phi_insertion  selfloop.phi_insertion  turnt.toml  while.phi_insertion
lesson6/ssa/src/: lib.rs  main.rs
lesson7/: Justfile  a.out  add.c  test.c  test2.c  test_add.c  test_fib.c  test_sum.c
lesson7/llvm-pass/: Cargo.toml
lesson7/llvm-pass/src/: lib.rs
lesson8/: brench.toml  check_brench_loop.py  test.bril
lesson8/loop-opt/: Cargo.toml
lesson8/loop-opt/src/: main.rs
