[workspace]
resolver = "2"
members = ["bril-frontend", "bril-lsp", "lesson2/build-cfg"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
bril-rs = { git = "https://github.com/sampsyo/bril", features = [
    "memory",
    "float",
    "ssa",
    "speculate",
    "position",
    "import",
    "char",
] }
slotmap = "1.0.7"
snafu = "0.8.5"
argh = "0.1.13"
serde_json = "1.0.137"
owo-colors = "4.1.0"
inform = { version = "0.3.3", features = ["io"] }

tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
] }
tower-lsp = "0.20.0"
dashmap = "6.1.0"

logos = "0.14.4"
insta = "1.42.1"
annotate-snippets = "0.11.5"
