[workspace]
resolver = "2"
members = [
  "lesson2/build-cfg",
  "lesson3/lvn",
  "lesson3/tdce",
  "lesson4/bril-util",
  "lesson4/dataflow",
  "lesson5/dominators",
  "lesson6/ssa",
  "lesson7/llvm-pass",
  "lesson8/loop-opt",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[workspace.dependencies]
bril-rs = { path = "bril/bril-rs", features = [
  "memory",
  "float",
  "ssa",
  "speculate",
  "position",
  "import",
  "char",
] }
slotmap = "1.0.7"
snafu = "0.8.5"
argh = "0.1.13"
serde_json = "1.0.137"
owo-colors = "4.1.0"
inform = { version = "0.3.4", features = ["io"] }
llvm-plugin = { version = "0.6.0", features = ["llvm18-0"] }
either = "1.5" # for inkwell: https://github.com/TheDan64/inkwell/issues/580
