[package]
name = "bril-frontend"
description = "AST and type-checking for Bril programs"
version = "0.1.2"
edition.workspace = true
license = "GPL-3.0"

[dependencies]
logos.workspace = true
inform.workspace = true
annotate-snippets.workspace = true

[dev-dependencies]
insta.workspace = true
snafu.workspace = true
