[package]
name = "bril-lsp"
version.workspace = true
edition.workspace = true
license = "GPL-3.0"

[dependencies]
tokio.workspace = true
tower-lsp.workspace = true
bril-rs = { git = "https://github.com/ethanuppal/bril", branch = "lsp0patches" }
bril2json = { git = "https://github.com/ethanuppal/bril", branch = "lsp0patches" }
brilirs = { git = "https://github.com/ethanuppal/bril", branch = "lsp0patches" }
dashmap.workspace = true
