[package]
name = "bril-lsp"
description = "Language server for Bril"
version = "0.1.2"
edition.workspace = true
license = "GPL-3.0"

[dependencies]
tokio.workspace = true
tower-lsp.workspace = true
bril-frontend = { path = "../bril-frontend/", version = "0.1.2" }
# bril-rs = { git = "https://github.com/ethanuppal/bril", branch = "lsp0patches" }
# bril2json = { git = "https://github.com/ethanuppal/bril", branch = "lsp0patches" }
# brilirs = { git = "https://github.com/ethanuppal/bril", branch = "lsp0patches" }
dashmap.workspace = true
logos.workspace = true
