[package]
name = "build-cfg"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
bril-rs.workspace = true
slotmap.workspace = true
snafu.workspace = true
argh.workspace = true
serde_json.workspace = true
owo-colors.workspace = true
inform.workspace = true
